[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "brymen"
version = "0.2"
dependencies = [
   "pyserial",
]
requires-python = ">=3.6"
authors = [
    {name = "pjcreath", email = "pjcreath@users.noreply.github.com"},
    {name = "Robert Wilbrandt", email = "robert@stamm-wilbrandt.de"},
]
description = "Python library to interface with Brymen multimeters"
readme = "README.md"
license = {text = "BSD 3-clause"}
keywords = ["Brymen", "multimeter", "dmm"]
classifiers = [
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
   "License :: OSI Approved :: BSD License",
   "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
   "Topic :: Software Development :: Libraries :: Python Modules",
   "Development Status :: 3 - Alpha",  # API may change
]

[tools.setuptools]
packages = ["brymen", "test", "test.helpers"]

[project.urls]
Repository = "https://github.com/pjcreath/brymen.git"
Issues = "https://github.com/pjcreath/brymen/issues"

[project.scripts]
brymen-console = "brymen.scripts.console:main"
